# ChemBoMAS

./: .gitignore  BAYBE_MIGRATION_GUIDE.md  ChemBoMAS_说明文档.md  DEVELOPMENT_DOCUMENTATION.md  FINAL_VERIFICATION_REPORT.md  LICENSE  NEXT_STEPS_CN.md  RAWEpoxyCureResult-share2-REVISED.csv  README.md  THIRD_PARTY_NOTICES.md  VERIFICATION_AGENT_ENHANCEMENT_SPEC.md  env.example  example.csv  example2.csv  example3_spacecorrected.csv  initial_data.csv  pyproject.toml  requirements.txt  setup.py  standard_template_fixed.csv  快速开始指南.md  集成完成报告.md  项目描述_中英文.md
agent_zyf/: 1.py  2.py  3.py  README.md  __init__.py  agent.py  chemistry_knowledge_base.py  enhanced_verification_tools.py  example.csv  example_1.csv  example_origin.csv  example_with_recommendation.csv  features_SubstanceA.csv  features_SubstanceB.csv  features_SubstanceC.csv  features_SubstanceD.csv  features_matrix_combined.csv  filtered_features_SubstanceA.csv  filtered_features_SubstanceB.csv  filtered_features_SubstanceC.csv  filtered_features_SubstanceD.csv  generate_template.py  prompts.py  requirements.txt  selected_features_with_scores_SubstanceA_Target_alpha_tg.csv  selected_features_with_scores_SubstanceA_Target_beta_impactstrength.csv  selected_features_with_scores_SubstanceA_Target_gamma_elongation.csv  selected_features_with_scores_SubstanceB_Target_alpha_tg.csv  selected_features_with_scores_SubstanceB_Target_beta_impactstrength.csv  selected_features_with_scores_SubstanceB_Target_gamma_elongation.csv  selected_features_with_scores_SubstanceC_Target_alpha_tg.csv  selected_features_with_scores_SubstanceC_Target_beta_impactstrength.csv  selected_features_with_scores_SubstanceC_Target_gamma_elongation.csv  target_variables.csv  (+11 more)
(+29 files in other folders)
