[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edbo"
version = "0.2.0"
description = "Bayesian reaction optimization as a tool for chemical synthesis."
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Jose A. Garrido Torres", email = "josegarridotorres@me.com"},
    {name = "Abigail Gutmann Doyle"}
]
keywords = ["Bayesian Optimization", "Chemical Reaction Optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "botorch>=0.12.0",
    "gpytorch>=1.13",
    "ipykernel>=6.29.0",
    "ipython>=8.18.0",
    "ipywidgets>=8.1.0",
    "Jinja2>=3.1.0",
    "joypy>=0.2.6",
    "lxml>=5.0.0",
    "mordred>=1.2.0",
    "numpy>=1.24.0",
    "ordered-set>=4.1.0",
    "pandas>=2.0.0",
    "pareto>=1.1.1.post3",
    "pymoo>=0.6.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "sympy>=1.12",
    "torch>=2.1.0",
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/doyle-lab-ucla/edboplus"
Repository = "https://github.com/doyle-lab-ucla/edboplus"
Issues = "https://github.com/doyle-lab-ucla/edboplus/issues"

[tool.setuptools.packages.find]
include = ["edbo*"]

[tool.setuptools.package-data]
edbo = ["*.py"] 